--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-sweetalert2": "^0.6.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.0.7"
   },
